changed poetika text

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     <div class="card-body">
                                         <h3 class="card-title"> Poetika </h3>
                                         <p style="font-weight: 500;">2021 - present</p>
-                                        <p class="card-text">A simple platform for sharing your goofs and gaffs, poetry
+                                        <p class="card-text">A simple platform for sharing your poetry
                                             styles.
                                         </p>
                                         <a 
